# wkv6_Ascend

./: .gitignore  README.md  RWKV6 Vector算子设计文档.docx  test.py  test_v6.py
cpu/: CMakeLists.txt  data_utils.h  main_cpu.cpp  run.sh  rwkv6_vector.cpp
cpu/cmake/: cpu_lib.cmake
cpu/scripts/: gen_data.py
docs/: wkv6_design.md
npu/: CMakeLists.txt  main_npu.cpp  pybind11.cpp  run.sh  rwkv6_vector.cpp  torch_benchmark.py  torch_test.py
npu/cmake/: npu_lib.cmake
npu/scripts/: gen_data.py  test_numpy.py
